managed to center the page - working on the structure.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,10 @@
-.page-holder {
-    min-height: 100vh;
-  }
+.background {
   
+}
   .bg-cover {
     background-size: cover !important;
   }
 
 .headline {
     text-align: center;
-}
-
-div {
-    background-color: red;
 }
