--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -415,6 +415,12 @@ h6, .h6 {
   line-height: 1.2;
 }
 
+.display-5 {
+  font-size: 3rem;
+  font-weight: 150;
+  line-height: 1.2;
+}
+
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
