main structure done - added auto play clip

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,17 @@
   background-color: teal;
 }
 
+.bg-ws {
+  background-color: darkkhaki;
+}
+
 .offer-height {
   height: 20em;
+}
+
+#myVideo {
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
