fixed the clip size

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,13 +8,16 @@
 
 
 .offer-height {
-  height: 20em;
+  height: 20vw;
 }
 
 #myVideo {
   padding-bottom: 2rem;
   right: 0;
   bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+  width: auto;
+  height: auto;
+  max-width: 100vw;
+  max-height: 100vh;
+  
 }
