-added almost every styling -> now it needs to be beautyfied

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,9 +15,13 @@
   padding-bottom: 2rem;
   right: 0;
   bottom: 0;
-  width: auto;
-  height: auto;
-  max-width: 100vw;
-  max-height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
   
+}
+
+.card {
+  margin: 0 auto; /* Added */
+  float: none; /* Added */
+  margin-bottom: 10px; /* Added */
 }
