--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,6 @@ body {
   overflow-x: hidden;
 }
 
-
 .bg {
   background-color: teal;
 }
@@ -11,6 +10,12 @@ body {
   background-color: #FFCA23
 }
 
+.video-text {
+  opacity: 80%;
+  background-color:black;
+  color: #FFCA23;
+  padding: 1rem 3rem 1rem 1rem;
+}
 
 .video-background-holder {
   position: relative;
@@ -47,8 +52,8 @@ body {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: black;
-  opacity: 0.5;
+  background-color: #FFCA23;
+  opacity: 0.1;
   z-index: 1;
 }
 
