--- a/styles/styles.css
+++ b/styles/styles.css
@@ -815,14 +815,9 @@ background-color: #f8fbfe;
   color: #111;
 }
 
-.testimonials .testimonial-item h4 {
-  font-size: 14px;
-  color: #999;
-  margin: 0;
-}
 
 .testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
-  color: #c9e3f5;
+  color: white;
   font-size: 26px;
 }
 
@@ -842,8 +837,9 @@ background-color: #f8fbfe;
 .testimonials .testimonial-item p {
   font-style: italic;
   margin: 0 15px 15px 15px;
+  color: white;
   padding: 20px;
-  background: #f3f9fd;
+  background: #FFCA23;
   position: relative;
   margin-bottom: 35px;
   border-radius: 6px;
@@ -861,23 +857,6 @@ background-color: #f8fbfe;
   left: calc(50% - 20px);
 }
 
-.testimonials .owl-nav, .testimonials .owl-dots {
-  margin-top: 5px;
-  text-align: center;
-}
-
-.testimonials .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd !important;
-}
-
-.testimonials .owl-dot.active {
-  background-color: #FFCA23 !important;
-}
 
 @media (max-width: 767px) {
   .testimonials {
